--- a/public/oldbrowser.html
+++ b/public/oldbrowser.html
@@ -71,8 +71,8 @@
         font-size: 12px;
         color: #808080;
         word-wrap:break-word;" >
-        VersionEye GmbH | Invalidenstrasse 50/51 | D-10557 Berlin | Germany |
-E-Mail: contact [at] versioneye.com | Amtsgericht: Berlin / Charlottenburg | Handelsregister: Berlin, HRB 144242 B | USt-IdNr.: DE282045007 | CEO: Robert Reiz
+        VersionEye GmbH | Rudolf-Breitscheid-Strasse 187 | 14482 Potsdam | Germany |
+          E-Mail: contact@versioneye.com | Amtsgericht: Berlin / Charlottenburg | Handelsregister: Berlin, HRB 144242 B | USt-IdNr.: DE282045007 | CEO: Robert Reiz | <a href="<%= Settings.instance.server_url %>/imprint?utm_medium=email">Imprint</a>
       </div>
     </div>
     <br/>
