--- a/public/500.html
+++ b/public/500.html
@@ -69,8 +69,8 @@
         font-size: 12px;
         color: #808080;
         word-wrap:break-word;" >
-        VersionEye GmbH | Rudolf-Breitscheid-Strasse 187 | 14482 Potsdam | Germany |
-          E-Mail: contact@versioneye.com | Amtsgericht: Berlin / Charlottenburg | Handelsregister: Berlin, HRB 144242 B | USt-IdNr.: DE282045007 | CEO: Robert Reiz | <a href="<%= Settings.instance.server_url %>/imprint?utm_medium=email">Imprint</a>
+        VersionEye GmbH | Julius-Hatry-Str. 1 | 68163 Mannheim | Germany |
+          E-Mail: contact@versioneye.com | Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 | CEO: Robert Reiz | <a href="<%= Settings.instance.server_url %>/imprint?utm_medium=email">Imprint</a><br/>
       </div>
     </div>
     <br/>
